[B3057] Mobile Horizontal Scroll bar issue - Fixed.

--- a/catalog/templates/core/css/template.css
+++ b/catalog/templates/core/css/template.css
@@ -1334,6 +1334,10 @@
 }
 
 @media (max-width: 479px) {
+  body {
+    overflow-x: hidden !important; 
+  }
+
   #loaded7 .show-on-mobile {
     display: block;
   }
